--- a/html/Sign Up Page.html
+++ b/html/Sign Up Page.html
@@ -24,6 +24,10 @@
                     <input type="password" id="password" name="password" required class="form-control">
                 </div>
                 <div class="form-group">
+                    <label for="phonenum">رقم الهاتف</label>
+                    <input type="text" id="phonenum" name="phone" required class="form-control">
+                </div>
+                <div class="form-group">
                     <label for="location">الموقع (المدينة/المنطقة)</label>
                     <input type="text" id="location" name="location" required class="form-control">
                 </div>
