--- a/html/Sign Up Page.html
+++ b/html/Sign Up Page.html
@@ -39,7 +39,7 @@
                     </select>
                 </div>
                 <div class="form-group" id="profession-field" style="display:none;">
-                    <label for="profession">الحرفة:</label>
+                    <label for="profession">الحرفة</label>
                     <input type="text" id="profession" name="profession" class="form-control">
                 </div>
                 <button type="submit" class="btn-primary">إنشاء حساب</button>
