--- a/html/Professional.html
+++ b/html/Professional.html
@@ -36,6 +36,7 @@
                     <p>تقييم: <span>4.5/5</span></p>
                     <a href="Booking Page.html"><button  class="btn-primary" >حجز موعد</button></a>
                     <button id="contact-btn" class="btn-secondary">تواصل مباشرة</button>
+                    <button id="logout-btn" class="btn-logout">تسجيل الخروج</button>
                 </div>
             </div>
             <!-- النافذة المنبثقة -->
@@ -61,10 +62,10 @@
             <section class="bookings-section">
                 <h2>قائمة الأشخاص الذين طلبوا الحجز</h2>
                 <ul>
-                    <li>أحمد السيد - تاريخ الحجز: 15 أغسطس 2024</li>
-                    <li>خالد محمود - تاريخ الحجز: 20 أغسطس 2024</li>
-                    <li>منى علي - تاريخ الحجز: 22 أغسطس 2024</li>
-                    <li>سارة إبراهيم - تاريخ الحجز: 24 أغسطس 2024</li>
+                    <li>أحمد السيد - تاريخ الحجز: 15 أغسطس 2024 - رقم الهاتف: 0100-123-4567</li>
+                    <li>خالد محمود - تاريخ الحجز: 20 أغسطس 2024 - رقم الهاتف: 0100-234-5678</li>
+        <li>منى علي - تاريخ الحجز: 22 أغسطس 2024 - رقم الهاتف: 0100-345-6789</li>
+        <li>سارة إبراهيم - تاريخ الحجز: 24 أغسطس 2024 - رقم الهاتف: 0100-456-7890</li>
                     <!-- يمكن إضافة المزيد من الحجز -->
                 </ul>
             </section>
@@ -91,6 +92,14 @@
     </footer>
 </body>
 <script>
+
+    // إضافة حدث لزر تسجيل الخروج
+document.getElementById('logout-btn').addEventListener('click', function() {
+    // تنفيذ عملية تسجيل الخروج، مثل حذف بيانات المستخدم من localStorage أو تنفيذ طلب تسجيل الخروج
+    localStorage.removeItem('isProfessional'); // على سبيل المثال
+    window.location.href = 'Login Page.html'; // إعادة التوجيه إلى صفحة تسجيل الدخول
+});
+
     // الحصول على العناصر
 const contactBtn = document.getElementById('contact-btn');
 const popup = document.getElementById('popup');
