--- a/html/Professional.html
+++ b/html/Professional.html
@@ -32,7 +32,7 @@
                 <div class="profile-info">
                     <h1>اسم الحرفي</h1>
                     <p>تخصص: <span>السباكة</span></p>
-                    <p>منطقة: <span>الرياض</span></p>
+                    <p>منطقة: <span>بنها</span></p>
                     <p>تقييم: <span>4.5/5</span></p>
                     <a href="Booking Page.html"><button  class="btn-primary" >حجز موعد</button></a>
                     <button id="contact-btn" class="btn-secondary">تواصل مباشرة</button>
@@ -139,7 +139,6 @@ window.addEventListener('click', function(event) {
     if (isProfessional === 'true') {
         bookingsSection.style.display = 'block';
     }
-
 
 </script>
 </html>
