--- a/html/Support Page.html
+++ b/html/Support Page.html
@@ -43,44 +43,16 @@
 
                 <div class="faq-item">
                     <h3>كيف يمكنني التواصل مع الدعم الفني؟</h3>
-                    <p>يمكنك التواصل مع فريق الدعم الفني عبر المعلومات المتاحة في قسم التواصل أو من خلال إرسال استفسار عبر النموذج المرفق.</p>
+                    <p>يمكنك التواصل مع فريق الدعم الفني عبر المعلومات المتاحة في قسم التواصل</p>
                 </div>
             </section>
-
-            <section class="inquiry-form-section">
-                <h2>إرسال استفسار أو مشكلة</h2>
-                <form action="../php/Support page.php" method="POST" class="inquiry-form">
-                    <div class="form-group">
-                        <label for="name">الاسم:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email">البريد الإلكتروني:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="subject">الموضوع:</label>
-                        <input type="text" id="subject" name="subject" required>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="message">الرسالة:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
-
-                    <button type="submit" class="submit-btn">إرسال</button>
-                </form>
-            </section>
-
             <section class="contact-info-section">
                 <h2>معلومات التواصل مع الدعم الفني</h2>
                 <p>يمكنك التواصل معنا عبر الوسائل التالية:</p>
                 <ul class="contact-info">
                     <li><i class="fas fa-phone"></i> الهاتف: 0123456789</li>
                     <li><i class="fas fa-envelope"></i> البريد الإلكتروني: support@harafi.com</li>
-                    <li><i class="fas fa-map-marker-alt"></i> العنوان: شارع التحرير، القاهرة، مصر</li>
+                    <li><i class="fas fa-map-marker-alt"></i> العنوان: بنها، قليوبيه</li>
                 </ul>
             </section>
         </div>
