--- a/html/serch.html
+++ b/html/serch.html
@@ -50,7 +50,7 @@
                 <ul class="results-list">
                     <li class="result-item">
                         <h3>محمد علي - سباكة</h3>
-                        <p>المنطقة: الرياض</p>
+                        <p>المنطقة:طحله</p>
                         <p>تقييم: 4.5/5</p>
                         <a href="#" class="more-info-btn">عرض المزيد</a>
                     </li>
