--- a/html/Reviews Page.html
+++ b/html/Reviews Page.html
@@ -71,7 +71,7 @@
 
             <div class="add-review">
                 <h2>إضافة تقييم جديد</h2>
-                <form action="#" method="POST" class="add-review-form">
+                <form action="../php/db_insert_reviews.php" method="POST" class="add-review-form">
                     
                     <div class="form-group">
                         <label for="service">نوع الخدمة:</label>
