--- a/html/Booking Page.html
+++ b/html/Booking Page.html
@@ -28,7 +28,7 @@
     <main class="booking-section">
         <div class="container2">
             <h1>حجز الخدمة</h1>
-            <form action="#" method="POST" class="booking-form">
+            <form action="../php/db_insert_Booking.php" method="POST" class="booking-form">
                 <div class="form-group">
                     <label for="service-type">نوع الخدمة المطلوبة</label>
                     <select id="service-type" name="service-type" required>
