--- a/html/Login Page.html
+++ b/html/Login Page.html
@@ -10,7 +10,7 @@
     <div class="auth-container">
         <div class="auth-card">
             <h2>تسجيل الدخول</h2>
-            <form action="login.php" method="POST" class="auth-form">
+            <form action="../php/check_login.php"  method="POST" class="auth-form">
                 <div class="form-group">
                     <label for="email">البريد الإلكتروني</label>
                     <input type="email" id="email" name="email" required class="form-control">
